--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,6 +2,10 @@
 
 // Import Component
 @import 'components/section';
+@import 'components/buttons';
+@import 'components/tables';
+@import 'components/colors';
+@import 'components/list';
 
 body {
     background-color: #e8e8e8;
