--- a/src/pages/LandingPage/css/landingpage.css
+++ b/src/pages/LandingPage/css/landingpage.css
@@ -8,6 +8,10 @@
     margin-bottom: 20px;
 }
 
+.dContact {
+    background-color: #ccac73;
+}
+
 .dFooter {
     background-color: black;
     color: white;
