--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -5,3 +5,10 @@
     -moz-box-shadow: 0px 0px 5px 0px #dc3545;
     box-shadow: 0px 0px 5px 0px #dc3545;
 }
+
+.dButtonCream {
+    background-color: #d2b177;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
