--- a/src/assets/scss/components/_section.scss
+++ b/src/assets/scss/components/_section.scss
@@ -3,4 +3,10 @@
     margin-bottom: 20px;
     border-radius: 8px;
     text-align: center;
+    padding: 30px;
+
+    .dTitle {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
 }
