--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -6,6 +6,8 @@
 @import 'components/tables';
 @import 'components/colors';
 @import 'components/list';
+@import 'components/background';
+@import 'components/text';
 
 body {
     background-color: #e8e8e8;
