--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -9,6 +9,9 @@
 @import 'components/background';
 @import 'components/text';
 
-body {
-    background-color: #e8e8e8;
+#root {
+    height: 100%;
+}
+html, body{
+    height: 100%;
 }
