--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -12,3 +12,10 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+.dButtonDanger {
+    background-color: #fe0202;
+    -webkit-box-shadow: 0px 5px 5px -3px #000;
+    -moz-box-shadow: 0px 5px 5px -3px #000;
+    box-shadow: 0px 5px 5px -3px #000;
+}
