--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -8,10 +8,14 @@
 @import 'components/list';
 @import 'components/background';
 @import 'components/text';
+@import 'components/responsive';
+@import 'components/form';
 
 #root {
     height: 100%;
 }
 html, body{
     height: 100%;
+    margin:0;
+    padding:0;
 }
