--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'components/text';
 @import 'components/responsive';
 @import 'components/form';
+@import 'components/fonts';
 
 #root {
     height: 100%;
