--- a/src/assets/scss/components/_fonts.scss
+++ b/src/assets/scss/components/_fonts.scss
@@ -131,3 +131,14 @@
     font-weight: 400;
     src: url('../../font/Roboto-LightItalic.ttf');
 }
+
+.GilroyBold {
+    font-family: 'Gilroy-Bold';
+}
+.RobotoBold {
+    font-family: 'Roboto-Bold';
+}
+
+.Serif {
+    font-family: 'Serif';
+}
