--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -11,6 +11,7 @@
 @import 'components/responsive';
 @import 'components/form';
 @import 'components/fonts';
+@import 'components/cursor';
 
 #root {
     height: 100%;
