--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -2,6 +2,11 @@
     text-transform: uppercase;
     margin-top: 30px;
     margin-bottom: 30px;
+
+    h1 {
+      font-family: 'Roboto-Bold';
+    }
+    
     .dTextGradient {
         background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 10%, rgba(255, 255, 255, .1) 40%, #d2b177 75%, #d2b177 100%) repeat scroll 0 0;
     }
