--- a/src/assets/scss/components/_background.scss
+++ b/src/assets/scss/components/_background.scss
@@ -1,3 +1,6 @@
+.dBoxBackgroundImage {
+    height: 400px;
+}
 .dBackgroundImageTop {
     background-position: top;
     background-size: cover;
@@ -11,3 +14,22 @@
     height: 100%;
     width: 100%;
 }
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) { 
+    .dBoxBackgroundImage {
+        height: 200px;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) { }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) and (max-width: 991.98px) {  }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) and (max-width: 1199.98px) { }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {  }
