--- a/src/assets/scss/components/_responsive.scss
+++ b/src/assets/scss/components/_responsive.scss
@@ -1,12 +1,19 @@
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) { 
+    .dIframe {
+        height: 200px;
+    }
     .dFooterSqueze {
         position: static !important;
     }
 }
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) and (max-width: 767.98px) { }
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    .dIframe {
+        height: 200px;
+    }
+}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) and (max-width: 991.98px) {  }
