--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'components/form';
 @import 'components/fonts';
 @import 'components/cursor';
+@import 'components/image';
 
 #root {
     height: 100%;
